glTF Test Module; glTF Refactor After Array 'len' attrib removal
Changes to the Array class required big refactor of the glTF class.
Tests all passing; updates to other container init() methods:
    (fixed bug where a nullptr to scratch allocator could be dereffed in
    StringBuffer and Array classes)

Add a small test module for glTF class to ensure refactor did not
introduce bugs. This module is not extensive, but tests a number of
different load functions, such as StringBuffer and Array loads, so it
works for now.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,25 +1,23 @@
 cmake_minimum_required(VERSION 3.2)
-project(SlugVk-lib-common)
-
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 17) 
 set(CMAKE_CXX_STANDARD_REQUIRED true)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+project(SlugVk-lib-common)
 
 set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${LINK_FLAGS}")
-
-set(LINK_FLAGS 
-    -lglfw
-    -lvulkan
-    -ldl
-    -lpthread
-    -lX11
-    -lXxf86vm
-    -lXrandr
-    -lXi
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMPILE_FLAGS_SLUGVK_COMMON}")
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${LINK_FLAGS_SLUGVK_COMMON}")
+set(LINK_FLAGS_SLUGVK_COMMON
+    "-lglfw"
+    "-lvulkan"
+    "-ldl"
+    "-lpthread"
+    "-lX11"
+    "-lXxf86vm"
+    "-lXrandr"
+    "-lXi"
 )
 
 option(BUILD_DEBUG ON)
@@ -60,8 +58,8 @@ add_library(SlugVk-lib-common
     external/tlsf.cpp
 )
 target_include_directories(SlugVk-lib-common PUBLIC . ./external ./external/nlohmann)
-target_compile_options(SlugVk-lib-common PUBLIC "${GCC_COVERAGE_COMPILE_FLAGS}")
-target_link_libraries(SlugVk-lib-common PUBLIC "${LINK_FLAGS}")
+target_compile_options(SlugVk-lib-common PUBLIC "${COMPILE_FLAGS_SLUGVK_COMMON}")
+target_link_libraries(SlugVk-lib-common PUBLIC "${LINK_FLAGS_SLUGVK_COMMON}")
 
 if (BUILD_TESTS)
     message("Building TESTS...")
@@ -70,8 +68,9 @@ if (BUILD_TESTS)
         test/test_entrypoint.cpp
         test/test.cpp
         test/spv_test.cpp
+        test/gltf_test.cpp
     )
     target_include_directories(SlugVk-lib-common-TestAll PRIVATE .)
-    target_compile_options(SlugVk-lib-common-TestAll PRIVATE "${GCC_COVERAGE_COMPILE_FLAGS}")
-    target_link_libraries(SlugVk-lib-common-TestAll PUBLIC SlugVk-lib-common "${LINK_FLAGS}")
+    target_compile_options(SlugVk-lib-common-TestAll PRIVATE "${COMPILE_FLAGS_SLUGVK_COMMON}")
+    target_link_libraries(SlugVk-lib-common-TestAll PRIVATE SlugVk-lib-common)
 endif()
